--- a/dosen.html
+++ b/dosen.html
@@ -1,4 +1,3 @@
-<!-- File: dosen.html -->
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -80,9 +79,9 @@
       <h2>SIAKAD</h2>
       <nav>
         <ul>
-          <li><a href="#">Profil Dosen</a></li>
-          <li><a href="#">Daftar Nilai Mahasiswa</a></li>
-          <li><a href="#">Jadwal Sidang Mahasiswa</a></li>
+          <li><a href="index.html">Pengajuan Proposal</a></li>
+          <li><a href="dosen.html">Daftar Nilai Mahasiswa</a></li>
+          <li><a href="dashboard.html">Jadwal Sidang Mahasiswa</a></li>
         </ul>
       </nav>
       <a href="#">Log Out</a>
