--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- File: mahasiswa.html -->
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -80,9 +79,10 @@
       <h2>SIAKAD</h2>
       <nav>
         <ul>
-          <li><a href="#">Profil Saya</a></li>
-          <li><a href="#">Pengajuan Proposal</a></li>
-          <li><a href="#">Jadwal Sidang</a></li>
+          <li><a href="index.html">Profil Saya</a></li>
+          <li><a href="index.html">Pengajuan Proposal</a></li>
+          <li><a href="dashboard.html">Jadwal Sidang</a></li>
+          <li><a href="dosen.html">Daftar Nilai Mahasiswa</a></li>
         </ul>
       </nav>
       <a href="#">Log Out</a>
